--- a/TdxPlugin.vcxproj.filters
+++ b/TdxPlugin.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="TdxPlugin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Log.cpp">
+      <Filter>Util</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
